# yoga

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xjf/yoga/: FirstFragment.java  MainActivity.java  SecondFragment.java  Test.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/xjf/yoga/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
yoga/: build.gradle
yoga/src/androidTest/java/com/xjf/yoga/: ExampleInstrumentedTest.java
yoga/src/main/: AndroidManifest.xml
yoga/src/main/java/com/xjf/yoga/: YogaNative.kt
yoga/src/main/java/com/xjf/yoga/config/: YogaConfig.kt  YogaConfigJNIBase.kt  YogaConfigJNIFinalizer.kt  YogaExperimentalFeature.kt  YogaLogger.kt
yoga/src/main/java/com/xjf/yoga/flexNode/: FlexNode.kt  YogaAlign.kt  YogaBaselineFunction.java  YogaConstants.java  YogaDirection.kt  YogaDisplay.java  YogaEdge.java  YogaFlexDirection.kt  YogaJustify.kt  YogaLogLevel.kt  YogaMeasureFunction.kt  YogaMeasureMode.kt  YogaNodeJNIBase.kt  YogaNodeJNIFinalizer.kt  YogaOverflow.java  YogaPositionType.java  YogaUnit.java  YogaValue.java  YogaWrap.java
yoga/src/main/java/com/xjf/yoga/node/: INode.kt
yoga/src/main/jni/: CMakeLists.txt
yoga/src/main/jni/jni/: ScopedGlobalRef.h  ScopedLocalRef.h  YogaJniException.cpp  YogaJniException.h  corefunctions.cpp  corefunctions.h  yogajni.cpp
